# qt-jpegxl-image-plugin

./: .gitignore  CMakeLists.txt  README.md  appveyor.yml  build_libqjpegxl_dynamic.sh  metainfo.yaml  qt-jpegxl-image-plugin.pro  qt-jpegxl-image-plugin6.pro  qt-jpegxl-image-plugin_appveyor.pro
qtbuild_5.15.2/: qt-jpegxl-image-plugin_alternative_appveyor.pro
qtbuild_6.2.4/: qt-jpegxl-image-plugin_alternative_appveyor.pro
qtbuild_6.5.3/: qt-jpegxl-image-plugin_alternative_appveyor.pro
qtbuild_6.7.1/: qt-jpegxl-image-plugin_alternative_appveyor.pro
qtbuild_6.7.2/: qt-jpegxl-image-plugin_alternative_appveyor.pro
qtbuild_6.8.0/: qt-jpegxl-image-plugin_alternative_appveyor.pro
qtbuild_6.8.1/: qt-jpegxl-image-plugin_alternative_appveyor.pro
qtbuild_6.8.3/: qt-jpegxl-image-plugin_alternative_appveyor.pro
qtbuild_6.9.2/: qt-jpegxl-image-plugin_alternative_appveyor.pro
qtbuild_6.9.3/: qt-jpegxl-image-plugin_alternative_appveyor.pro
src/: CMakeLists.txt  jpegxl.json  jxl.desktop  main.cpp  qjpegxlhandler.cpp  qjpegxlhandler_p.h  util_p.h
testfiles/: jpegxl-logo.jxl
